<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:background="#ff3b4b4e">

    <EditText
        android:id="@+id/queryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/queryPrompt"
        android:imeOptions="actionNext"
        android:textColor="@android:color/background_light">
         
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TypeSearch"
        android:id="@+id/typeSearch"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allWords"
            android:id="@+id/awRadioButton"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exact"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anyWords"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:textColor="@android:color/background_light" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/textView2"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/FromeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:imeOptions="actionNext"
            android:hint="@string/tagFrom"
            android:textColor="@android:color/background_light"/>

        <EditText
            android:id="@+id/UntileditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:imeOptions="actionNext"
            android:hint="@string/tagUntil"
            android:textColor="@android:color/background_light"/>


    </LinearLayout>

    <LinearLayout
        android:layout_gravity="fill_horizontal" >

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_horizontal"
            android:layout_weight="1"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone"
            android:textColor="@android:color/background_light" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/saveDescription"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_gravity="fill"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#ff4da9ff"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/taggedSearches"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@android:id/list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/tagged_searches_padding"
            android:layout_marginTop="@dimen/tagged_searches_padding"
            android:layout_weight="0.52"
            android:smoothScrollbar="true" />

    </LinearLayout>

</GridLayout>